# bevy_config_cam

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: main.yml  master.yml
assets/: README.md
assets/models/: README.md  cam.blend  cam.blend1  cam.gltf
assets/models/AlienCake/: README.md  craft_speederA.glb
config_cam_derive/: Cargo.toml
config_cam_derive/src/: driver_marker.rs  lib.rs
credits/: CREDITS.md
credits/licenses/: bevy_config_cam_ISC.md  bevy_config_cam_MIT.md  bevy_config_cam_license.md  bevy_flycam_ISC.md
driver_marker_derive/: Cargo.toml
driver_marker_derive/src/: lib.rs
examples/: README.md  change.rs  custom_move.rs  default.rs  external_plugin.rs  inspect_egui.rs  minimal.rs  mult_cams.rs  multiple_targets.rs  orbit.rs  player.rs  refactor.rs  refactor_mult_cams.rs  restrict_cam.rs  select.rs  simple.rs  switch.rs  test.rs  text.rs  vehicle.rs  yp.rs
lib/bevy_flycam/: Cargo.toml  LICENSE.md
lib/bevy_flycam/src/: lib.rs
src/: cam.rs  default_cam_modes.rs  lib.rs  player.rs
src/drive/: driver_control.rs  drivers.rs  mod.rs  views.rs
src/driver/: driver_core.rs  driver_resources.rs  mod.rs
src/drivers/: first_person_view.rs  fpv.rs  mod.rs  orbit.rs  pinned.rs
