[package]
name = "bevy_config_cam"
version = "0.2.0"
authors = ["Black Phlox <bphlox@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/BlackPhlox/bevy_config_cam"
documentation = "https://docs.rs/bevy_config_cam"
description = "An easy plug-n-play multifunctional camera that allows for easy setup of a camera and player for a scene."
keywords = ["gamedev", "bevy", "camera", "fps", "3d", ]
categories = ["game-development", "game-engines", ]
exclude = [
    "assets/*",
    ".github/*",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bevy_config_cam"

[dependencies]
rand = "0.8.0"
strum = "0.21.0"
strum_macros = "0.21.1"

[dependencies.bevy]
version = "0.6"
features = ["render"]
default-features = false

[dev-dependencies.bevy]
version = "0.6"
features = ["bevy_winit", "bevy_gltf"]
default-features = false

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.6"
features = ["x11", "wayland"]
default-features = false
