[package]
name = "bevy_config_cam"
version = "0.4.0"
authors = ["Black Phlox <bphlox@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/BlackPhlox/bevy_config_cam"
documentation = "https://docs.rs/bevy_config_cam"
description = "An easy plug-n-play multifunctional camera that allows for easy setup of a camera and player for a scene."
keywords = ["gamedev", "bevy", "camera", "fps", "3d", ]
categories = ["game-development", "game-engines", ]
exclude = [
    "assets/*",
    ".github/*",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bevy_config_cam"

[dependencies]
rand = "0.8"
strum = "0.25"
strum_macros = "0.25"
bevy_dolly = "0.0.1"
config_cam_derive = { path = "config_cam_derive" }

[dependencies.bevy]
version = "0.11"
features = ["bevy_render","bevy_pbr"]
default-features = false

[dev-dependencies.bevy]
version = "0.11"
features = ["bevy_core_pipeline", "bevy_asset", "bevy_scene", "bevy_pbr", "bevy_gltf", "x11", "wayland"]
default-features = false