[package]
name = "bevy_flycam"
version = "0.5.0"
authors = ["Spencer Burris <sburris@posteo.net>", "Black Phlox <bphlox@gmail.com>"]
edition = "2018"
license = "ISC"
description = "Basic first-person fly camera for the Bevy game engine"
homepage = "https://github.com/sburris0/bevy_flycam/"
repository = "https://github.com/sburris0/bevy_flycam/"
readme = "README.md"
keywords = ["gamedev", "bevy", "3d", "camera", ]
categories = ["game-engines", "game-development"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.5", default-features = false, features = ["render"] }

[dev-dependencies]
bevy = { version = "0.5", default-features = false, features = ["render", "bevy_winit", "bevy_wgpu" ] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
bevy = { version = "0.5", default-features = false, features = [ "x11", "wayland" ] }
